@@ -1,21 +1,26 @@
 package br.com.fiap.logistic.service.impl;
 
 import br.com.fiap.logistic.adapter.TrackingConverter;
+import br.com.fiap.logistic.domain.Order;
 import br.com.fiap.logistic.domain.Tracking;
 import br.com.fiap.logistic.entity.TrackingEntity;
+import br.com.fiap.logistic.exception.LatitudeLongitudeObrigatorioException;
 import br.com.fiap.logistic.gateway.TrackingGateway;
 import br.com.fiap.logistic.service.TrackingService;
 import lombok.AllArgsConstructor;
 
 import java.math.BigDecimal;
+import java.time.LocalDateTime;
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.Random;
+
 
 @AllArgsConstructor
 public class TrackingServiceImpl implements TrackingService {
 
     private final TrackingGateway trackingGateway;
     private final TrackingConverter trackingConverter;
+    private final Random random = new Random();
 
     @Override
     public Tracking createTracking(Tracking tracking) {
@@ -26,7 +31,7 @@ public class TrackingServiceImpl implements TrackingService {
     @Override
     public void updateTrackingLatitudeAndLongitude(Long trackingId, BigDecimal latitude, BigDecimal longitude) {
         if (latitude == null || longitude == null) {
-            throw new RuntimeException("Latitude e longitude são obrigatórios");
+            throw new LatitudeLongitudeObrigatorioException("Latitude e longitude são obrigatórios");
         }
         final Tracking tracking = getTrackingByOrderId(trackingId);
         tracking.updateLatitudeLongitude(latitude, longitude);
@@ -43,7 +48,13 @@ public class TrackingServiceImpl implements TrackingService {
     @Override
     public List<Tracking> getTrackingByLatitudeAndLongitude(BigDecimal latitude, BigDecimal longitude) {
         return trackingGateway.getTrackingByLatitudeAndLongitude(latitude, longitude)
-                .map(list -> list.stream().map(trackingConverter::toDomain).collect(Collectors.toList()))
+                .map(list -> list.stream().map(trackingConverter::toDomain).toList())
                 .orElseThrow( () -> new RuntimeException("Tracking não encontrado"));
     }
+
+    @Override
+    public LocalDateTime calculateEstimatedDelivery(Order order) {
+        return LocalDateTime.now().plusDays(random.nextInt(7) + 1L);
+    }
+
 }
